--- a/conf/index.html
+++ b/conf/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>LNMP一键安装包却毒版 by Jim</title>
+<title>LNMP一键安装包祛毒版 by Jim</title>
 <meta charset="utf-8">
 <meta name="author" content="Licess">
-<meta name="keywords" content="lnmp,lnmp一键安装包,一键安装包">
-<meta name="description" content="您已成功安装LNMP一键安装包！">
+<meta name="keywords" content="lnmp,lnmp一键安装包祛毒版,一键安装包祛毒版">
+<meta name="description" content="您已成功安装LNMP一键安装包祛毒版！">
 <style type="text/css">
 <!--
 body {
@@ -24,20 +24,20 @@ font-family:"Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB
 </head>
 <body>
 <div id="main">
-<div align="center"><b>恭喜您，LNMP一键安装包安装成功！</b></div>
-<div align="center"><img src="lnmp.gif" alt="LNMP一键安装包"></div>
-<br><h2 style="word-break:break-all;"><a href="https://lnmp.me" target="_blank">LNMP一键安装包</a>是一个用Linux Shell编写的可以为CentOS/RHEL/Fedora/Aliyun/Amazon Linux、Debian/Ubuntu/Raspbian/Deepin/Mint Linux VPS或独立主机安装LNMP(Nginx/MySQL/PHP)、LNMPA(Nginx/MySQL/PHP/Apache)、LAMP(Apache/MySQL/PHP)生产环境的Shell程序。</h2>
+<div align="center"><b>恭喜您，LNMP一键安装包祛毒版安装成功！</b></div>
+<div align="center"><img src="lnmp.gif" alt="LNMP一键安装包祛毒版"></div>
+<br><h2 style="word-break:break-all;"><a href="https://lnmp.me" target="_blank">LNMP一键安装包祛毒版</a>是一个用Linux Shell编写的可以为CentOS/RHEL/Fedora/Aliyun/Amazon Linux、Debian/Ubuntu/Raspbian/Deepin/Mint Linux VPS或独立主机安装LNMP(Nginx/MySQL/PHP)、LNMPA(Nginx/MySQL/PHP/Apache)、LAMP(Apache/MySQL/PHP)生产环境的Shell程序。</h2>
 <h3>支持自定义Nginx、PHP编译参数及网站和数据库目录、支持生成Let’s Ecrypt免费证书及自备证书、支持HTTP2、TLS 1.3等新特性、LNMP模式支持多PHP版本、支持单独安装Nginx/MySQL/MariaDB/Pureftpd服务器、支持无人值守安装，同时提供一些实用的辅助工具如：虚拟主机管理、FTP用户管理、Nginx/MySQL/MariaDB/PHP/PHPMyAdmin的升级、常用缓存组件Redis/Xcache等的安装、重置MySQL root密码、502自动重启、日志切割、SSH防护DenyHosts/Fail2Ban、备份等许多实用脚本。</h3>
 
 <p>查看本地环境: <a href="/p.php" target="_blank" class="links">探针</a>&nbsp;&nbsp;<a href="/phpinfo.php" target="_blank" class="links">phpinfo</a>&nbsp;&nbsp;<a href="/phpmyadmin/" target="_blank" class="links">phpMyAdmin</a>(为了安全，建议将phpmyadmin目录重命名为不容易猜到的目录！)</p>
 
-<p>更多LNMP一键安装包信息请访问: <a href="https://lnmp.me" target="_blank">https://lnmp.me</a></p>
-<p>LNMP一键安装包常见问题: <a href="https://lnmp.me/faq.html" target="_blank">https://lnmp.me/faq.html</a></p>
+<p>更多LNMP一键安装包祛毒版信息请访问: <a href="https://lnmp.me" target="_blank">https://lnmp.me</a></p>
+<p>LNMP一键安装包祛毒版常见问题: <a href="https://lnmp.me/faq.html" target="_blank">https://lnmp.me/faq.html</a></p>
 <p>VPS啦VPS推荐: <a href="https://vps.la" target="_blank">https://vps.la</a></p>
 
-<div align="center"><b>声明：出现该页面只说明您当前访问的域名/网站使用了LNMP一键安装包搭建的环境，当前域名/网站与LNMP一键安装包、VPS侦探和licess不存在任何关系！</b></div>
+<div align="center"><b>声明：出现该页面只说明您当前访问的域名/网站使用了LNMP一键安装包祛毒版搭建的环境，当前域名/网站与LNMP一键安装包祛毒版、VPS侦探和licess不存在任何关系！</b></div>
     
-<div align="center"><h3><a href="https://lnmp.me" target="_blank">LNMP一键安装包</a> by <a href="http://blog.licess.com" target="_blank">Licess</a> & <a href="https://vps.la" target="_blank">VPS啦</a></h3></div>
+<div align="center"><h3><a href="https://lnmp.me" target="_blank">LNMP一键安装包祛毒版</a> by <a href="http://vps.la" target="_blank">Jim</a> & <a href="https://vps.la" target="_blank">VPS啦</a></h3></div>
 </div>
 </body>
 </html>
